# Pocket-TTS-ONNX

./: .gitignore  example.py  main.py  pyproject.toml
src/pocket_tts/: __init__.py  pocket_tts.py
src/pocket_tts/modules/: _onnx_base_model.py  flow_matching.py  mimi.py  tokenizer.py
