[project]
name = "pocket-tts-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "onnxruntime>=1.25.1",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]